--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 
 
 server:
-    port: 8080
+    port: 8090
     contextPath: /mercury
     
 ---    
 spring:
   profiles: local,default
+  main:
+    banner-mode: "off"
 datasource:
   sampleapp:
     url: jdbc:h2:~/test
