--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,19 +1,25 @@
 
 
 server:
-    port: 8090
-    contextPath: /mercury
+  port: 8090
+  contextPath: /mercury
+
+spring:
+  profile:
+    active: local
+
     
 ---    
 spring:
-  profiles: local,default
+  profiles: test
   main:
     banner-mode: "off"
 datasource:
-  sampleapp:
-    url: jdbc:h2:~/test
-    username: SA
-    password:
+  mercury:
+    # url: jdbc:h2:~/test
+    url: jdbc:h2:file:/tmp/test;DB_CLOSE_ON_EXIT=FALSE
+    username: test
+    password: test
     driverClassName: org.h2.Driver
     defaultSchema:
     maxPoolSize: 10
@@ -22,4 +28,24 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.H2Dialect 
-    
+---
+spring:
+  profiles: dev,prod
+  main:
+    banner-mode: "off"
+  jpa:
+    properties:
+      show_sql: true
+    hibernate:
+      ddl-auto: create
+      hbm2ddl.method: create
+      show_sql: true
+      format_sql: true
+datasource:
+  mercury:
+    url: jdbc:mariadb://localhost:3306/mercury
+    username: mercury
+    password: mercury
+    driverClassName: org.mariadb.jdbc.Driver
+    defaultSchema: mercury
+    maxPoolSize: 10
