--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 
+spring.jmx:
+  enabled: false
 
 server:
   port: 8090
@@ -12,8 +14,10 @@ spring:
 ---    
 spring:
   profiles: test
+
   main:
-    banner-mode: "off"
+    banner-mode: console
+
 datasource:
   mercury:
     # url: jdbc:h2:~/test
@@ -23,16 +27,14 @@ datasource:
     driverClassName: org.h2.Driver
     defaultSchema:
     maxPoolSize: 10
-    hibernate:
-      hbm2ddl.method: create-drop
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.H2Dialect 
+
 ---
 spring:
   profiles: dev,prod
+
   main:
-    banner-mode: "off"
+    banner-mode: console
+
   jpa:
     properties:
       show_sql: true
@@ -41,6 +43,7 @@ spring:
       hbm2ddl.method: create
       show_sql: true
       format_sql: true
+
 datasource:
   mercury:
     url: jdbc:mariadb://localhost:3306/mercury
