--- a/frontend/src/main/frontend/package.json
+++ b/frontend/src/main/frontend/package.json
@@ -20,12 +20,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "bootstrap": "~3.3.7",
-    "font-awesome": "~4.7.0"
+    "font-awesome": "~4.7.0",
+    "bootstrap": "~4.0.0-alpha.6"
   },
   "devDependencies": {
     "@angular/cli": "1.0.1",
