--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,13 +57,14 @@
 			<version>1.1.7</version>
 		</dependency>
 
+		<!-- need o run mvn install before anything else to make the jar available in the repo
 		<dependency>
 			<groupId>net.wohlfart</groupId>
 			<artifactId>frontend</artifactId>
 			<version>${project.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
+-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
