--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
-language: java
-jdk:
-  - openjdk7
-  - oraclejdk8
+
+sudo: required
+
 dist: trusty
+
+language: java
+
+jdk:
+  - oraclejdk8
+
+
+services:
+  - docker
