--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -74,10 +74,33 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- https://github.com/spotify/dockerfile-maven
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.3.0</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+							<goal>push</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<repository>spotify/foobar</repository>
+					<tag>${project.version}</tag>
+				</configuration>
+			</plugin>
+			-->
+
 		</plugins>
 	</build>
 
