--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -16,6 +16,20 @@ spring:
 security:
   basic:
     enabled: false
+
+# facebook sso config
+facebook:
+  client:
+    clientId: 244131516077559
+    clientSecret: ac62351165fe66dbc87fc0ca65ccb2d3
+    accessTokenUri: https://graph.facebook.com/oauth/access_token
+    userAuthorizationUri: https://www.facebook.com/dialog/oauth
+    tokenName: oauth_token
+    authenticationScheme: query
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://graph.facebook.com/me
+
 management:
   security:
     enabled: false
@@ -33,8 +47,8 @@ spring:
 
 datasource:
   mercury:
-    # url: jdbc:h2:~/test
-    url: jdbc:h2:file:/tmp/test;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:~/test
+    # url: jdbc:h2:file:/tmp/test;DB_CLOSE_ON_EXIT=FALSE
     username: test
     password: test
     driverClassName: org.h2.Driver
