--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,11 +24,23 @@ facebook:
     clientSecret: ac62351165fe66dbc87fc0ca65ccb2d3
     accessTokenUri: https://graph.facebook.com/oauth/access_token
     userAuthorizationUri: https://www.facebook.com/dialog/oauth
-    tokenName: oauth_token
-    authenticationScheme: query
+    # tokenName: oauth_token
+    # authenticationScheme: query
     clientAuthenticationScheme: form
   resource:
     userInfoUri: https://graph.facebook.com/me
+
+# github sso config
+github:
+  client:
+    clientId: 1480763144c36b2301b6
+    clientSecret: 3cff933b9748f783a9a4402b51b60ca8e482b3ff
+    accessTokenUri: https://github.com/login/oauth/access_token
+    userAuthorizationUri: https://github.com/login/oauth/authorize
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://api.github.com/user
+
 
 management:
   security:
